fix text alignment

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -8,28 +8,22 @@
 }
 
 .desc {
-  /* padding-top: 900px; */
   position: absolute;
   top: 75%;
-  left: 50%;
   text-align: center;
-    /* margin: auto; */
+  width: 100%;
 }
 
 /* phone sizes */
 @media screen and (min-height: 667px) and (max-height: 1000px) {
   .desc {
-    width: 262px;
     font-size: 16px;
-    margin-left: -131px;
   }
 }
 
 /* desktop sizes */
 @media screen and (min-height: 1001px) {
   .desc {
-    width: 330px;
     font-size: 20px;
-    margin-left: -165px;
   }
 }
